# planeRF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Anvil01/: readme.txt
Dash/: app.py  requirements.txt
Dash/data/: soil.csv
Dash/pages/: common.py  ground.py  home.py  tissue.py
Dash01/: app.py  readme.txt  requirements.txt
Dash02/: readme.txt
admin/: 3EMEgos-meeting-20240206.pptx
src/planeRF/: __init__.py  common.py  ground.py
src/planeRF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: FEKO_S_values.csv  test_common.py  test_ground.py
